--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
         <p>Improve on the Siamotyrannus's choke minigame.</p>
       </div>
     </a>
-    <a class="card" href="tools/miranewcalc.html" target="_blank">
+    <a class="card" href="tools/miraoldcalc.html" target="_blank">
       <div class="card-image" style="background-image: url('img/secondcalc.jpg');"></div>
       <div class="card-body">
-        <h2>Reworked Miragaia tail damage calculator</h2>
-        <p>Reworked variant of the RenCup's one. made by pkionn.</p>
+        <h2>Old Miragaia tail damage calculator</h2>
+        <p>Old variant of miragaia damage calculator. made by RenCup.</p>
       </div>
     </a>
   </main>
