--- a/index.html
+++ b/index.html
@@ -18,10 +18,16 @@
       <div class="card-image" style="background-image: url('img/miragaia.jpg');"></div>
       <div class="card-body">
         <h2>Miragaia Tail Damage Calculator</h2>
-        <p>Simple Miragaia tail damage calculator, works by inputting the m1 damage.</p>
+        <p>Simple Miragaia tail damage calculator that works by inputting the m1 damage. made by Pkionn</p>
       </div>
     </a>
-
+    <a class="card" href="tools/siamooldminigame.html" target="_blank">
+      <div class="card-image" style="background-image: url('img/siamoold.jpg');"></div>
+      <div class="card-body">
+        <h2>Old Siamotyrannus Minigame Trainer</h2>
+        <p>First version of the Siamotyrannus Choke minigame trainer made by RenCup</p>
+      </div>
+    </a>
     <!-- Siamotyrannus Trainer -->
     <a class="card" href="tools/siamominigame.html" target="_blank">
       <div class="card-image" style="background-image: url('img/siamo.jpg');"></div>
