Update footer to credit additional contributor

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
   </section>
 
   <footer class="footer">
-    <span>Made with love by <strong>RenCup</strong>.</span>
+    <span>Made with love by <strong>RenCup and Pkionn</strong>.</span>
     <span>Utilities from various sources.</span>
   </footer>
 
