--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <h2 class="tool-title">Miragaia Tail Damage Calculator</h2>
         <span class="tool-tag">Calculator</span>
       </div>
-      <p class="tool-desc">Calculate tail damage from M1 input.</p>
+      <p class="tool-desc">Calculate tail damage from your M1 input.</p>
       <a class="tool-link" href="tools/mirataildmg.html">
         <span>➜</span> Open tool
       </a>
@@ -180,7 +180,7 @@
         <h2 class="tool-title">Cerato Leg Calculator</h2>
         <span class="tool-tag">Calculator</span>
       </div>
-      <p class="tool-desc">Multiply your input by 1.6.</p>
+      <p class="tool-desc">Input your M1 damage and it will calculate it.</p>
       <a class="tool-link" href="tools/ceratoleg.html">
         <span>➜</span> Open tool
       </a>
