--- a/tools/ceratoleg.html
+++ b/tools/ceratoleg.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Cerato Leg Calculator</title>
+<title>Cerato Leg Break Damage Calculator</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
