Update title and subtitle in ceratoleg.html

--- a/tools/ceratoleg.html
+++ b/tools/ceratoleg.html
@@ -135,8 +135,8 @@
 
   <header class="header">
     <div class="eyebrow">Calculator</div>
-    <h1>Cerato Leg Calculator</h1>
-    <p class="subtitle">Multiply your input by 1.6</p>
+    <h1>Cerato Leg Break Damage Calculator</h1>
+    <p class="subtitle">Put your M1 damage, u can see it by hovering ur mouse over ur weight</p>
   </header>
 
   <div class="tool-card">
