Update subtitle text in mirataildmg.html

--- a/tools/mirataildmg.html
+++ b/tools/mirataildmg.html
@@ -137,7 +137,7 @@
   <header class="header">
     <div class="eyebrow">Calculator</div>
     <h1>Miragaia Tail Damage</h1>
-    <p class="subtitle">Enter your M1 value to calculate tail damage</p>
+    <p class="subtitle">Put your M1 damage, u can see it by hovering ur mouse over ur weight</p>
   </header>
 
   <div class="tool-card">
