Update Miragaia damage calculator description and add Cerato leg calculator

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
     <div class="cube" onclick="location.href='tools/mirataildmg.html'">
       <h2>Miragaia Tail Damage Calculator</h2>
-      <p>Simple Miragaia tail damage calculator, works by inputting the m1 damage.</p>
+      <p>Simple Miragaia tail damage calculator, works by inputting the M1 damage.</p>
     </div>
 
     <div class="cube" onclick="location.href='tools/siamominigame.html'">
@@ -95,9 +95,9 @@
       <p>Improve on the Siamotyrannus's choke minigame.</p>
     </div>
 
-    <div class="cube" onclick="location.href='tools/mirataildmg-old.html'">
-      <h2>Old Miragaia Tail Calculator</h2>
-      <p>Old variant of Miragaia damage calculator. Made by RenCup.</p>
+    <div class="cube" onclick="location.href='tools/ceratoleg.html'">
+      <h2>Cerato Leg Calculator</h2>
+      <p>Input your M1 damage and it will calculate it.</p>
     </div>
 
   </div>
@@ -108,3 +108,4 @@
 
 </body>
 </html>
+
