--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
   </div>
 
   <div class="footer">
-    Made with love by <strong>RenCup</strong>. Utilities from various sources.
+    Made with love by <strong>RenCup and Pkionn</strong>. Utilities from various sources.
   </div>
 
 </body>
