--- a/index.html
+++ b/index.html
@@ -105,6 +105,10 @@
       <h2>Cerato Leg Calculator</h2>
       <p>Input your M1 damage and it will calculate it.</p>
     </div>
+    <div class="cube" onclick="location.href='tools/ceratoleg.html'">
+      <h2>Legacy tools</h2>
+      <p>Older tools not on the main page anymore</p>
+    </div>
 
   </div>
 
