--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       <h2>Cerato Leg Calculator</h2>
       <p>Input your M1 damage and it will calculate it.</p>
     </div>
-    <div class="cube" onclick="location.href='tools/ceratoleg.html'">
+    <div class="cube" onclick="location.href='legacy.html'">
       <h2>Legacy tools</h2>
       <p>Older tools not on the main page anymore</p>
     </div>
