--- a/index.html
+++ b/index.html
@@ -90,7 +90,10 @@
   <div class="subtitle">Select a tool to launch</div>
 
   <div class="grid">
-
+    <div class="cube" onclick="location.href='tools/allcalc.html'">
+      <h2>Multi-calculator [EXPERIMENTAL]</h2>
+      <p>Experimental calculator that has multiple modes to calculate multiple things! </p>
+    </div>
     <div class="cube" onclick="location.href='tools/mirataildmg.html'">
       <h2>Miragaia Tail Damage Calculator</h2>
       <p>Simple Miragaia tail damage calculator, works by inputting the M1 damage.</p>
